[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
protocol_macros = { path = "../protocol_macros", optional = true }
macros = { path = "../macros" }
strum = "0.26"
strum_macros = "0.26"

[features]
derive = ["protocol_macros"]