[package]
name = "protocol_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.51", features = ["parsing", "extra-traits"]  }
proc-macro2 = "1.0.78"